# LinuxIPCMedia

./: CMakeLists.txt  build.sh
Share/: CMakeLists.txt
Share/Msg/include/: Msg.h
Share/Msg/src/: Msg.cpp
Share/Public/Audio/include/: ShareAudio.h
Share/Public/Audio/src/: ShareAudio.cpp
Share/Public/Talk/include/: ShareTalk.h
Share/Public/Talk/src/: ShareTalk.cpp
Share/Public/Video/include/: ShareVideo.h
Share/Public/Video/src/: ShareVideo.cpp
Share/Sem/include/: Sem.h
Share/Sem/src/: Sem.cpp
Share/Shm/include/: Shm.h
Share/Shm/src/: Shm.cpp
Share/api/: client.cpp  client.h  server.cpp  server.h
Share/demo/: client.cpp  server.cpp  shareType.h
config/: hi3556_dsjet_gb.cmake
hi3556/dsjet_gb/: readme.txt
hi3556/dsjet_gb/include/: Gb28181Api.h  Gb28181Def.h
hi3556/dsjet_gb/src/: timer.cpp
hi3556/include/: CR_DeviceNet.h  CR_DeviceNetDef.h  server.h
hi3556/src/: main.cpp
